<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.example.chatapp.ui.register.RegisterViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@drawable/shipped"
        tools:context=".ui.register.RegisterActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:elevation="0dp"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/create_account"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".27" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/guid"

                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/first_name"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    app:error="@{vm.firstNameError}"
                    android:layout_gravity="center">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@={vm.firstName}"
                        android:hint="@string/first_name" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/last_name"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    app:error="@{vm.lastNameError}"

                    android:layout_gravity="center">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={vm.lastName}"

                        android:hint="@string/last_name" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_name"
                    android:layout_width="380dp"
                    android:layout_marginBottom="10dp"
                    app:error="@{vm.userNameError}"

                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={vm.userName}"

                        android:hint="@string/user_name" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email"
                    android:layout_marginBottom="10dp"
                    app:error="@{vm.emailError}"

                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={vm.email}"

                        android:hint="@string/email" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    app:error="@{vm.passwordError}"

                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={vm.password}"
                        android:hint="@string/password" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="20dp"
                    android:background="@drawable/rounded_button"
                    android:textAllCaps="false"
                    android:onClick="@{()->vm.createAccount()}"
                    android:text="@string/create_account" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>