<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.example.chatapp.ui.addRoom.AddRoomViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@drawable/shipped"
        tools:context=".ui.register.RegisterActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:elevation="0dp"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/chat_app"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            tools:context=".ui.home.HomeActivity">
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                app:layout_constraintWidth_percent=".8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:cardCornerRadius="10dp"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_new_room"
                        android:textSize="20sp"
                        android:layout_marginBottom="20dp"

                        android:layout_gravity="center"
                        />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/image"
                        android:layout_marginBottom="20dp"

                      />
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/name_layout"
                        android:layout_marginBottom="10dp"
                        app:error="@{vm.nameError}"

                        android:layout_width="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={vm.name}"


                            android:hint="@string/enter_room_name" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"

                        />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/desc_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:error="@{vm.descriptionError}"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"

                        android:layout_marginBottom="10dp"
                        android:layout_gravity="center">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={vm.description}"
                            android:hint="@string/enter_room_descreption"
                            android:lines="4"
                            android:maxLines="4"
                            android:gravity="top"
                            android:layout_marginBottom="30dp"

                            />
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/send_massage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="20dp"
                            android:background="@drawable/rounded_button"
                            android:textAllCaps="false"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:onClick="@{()->vm.createRoom()}"

                            android:text="@string/create" />
                    </com.google.android.material.textfield.TextInputLayout>




                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>